# icetea

./: .clang-tidy  CMakeLists.txt  framework.json
include/icetea/: exports.h  icetea.h  icu4x_bridge.h  icu4x_capi.h  types.h  unicode_utils.h
src/: icetea.cpp  icu4x_bridge.cpp  icu4x_stubs.c  unicode_utils.cpp
tests/: CMakeLists.txt  icu4x_bridge_test.cpp  types_test.cpp  unicode_utils_test.cpp
